Bug fixed where sidebar is hidden after closing on mobile

--- a/Staking/styles/baseline.css
+++ b/Staking/styles/baseline.css
@@ -369,6 +369,10 @@ aside .sidebar .notification-count{
         grid-template-columns: 7.8rem auto 6rem;
     }
 
+    aside{
+        display: block;
+    }
+
     aside .logo h2{
         display: none;
     }
@@ -404,20 +408,12 @@ aside .sidebar .notification-count{
         box-shadow: 1rem 3rem 4rem var(--light);
         height: 100vh;
         padding-right: var(--card-padding);
-        display: none;
-        animation: showMenu 400ms ease forwards;
+        transition: all 300ms ease;
     }
-
 
     aside .top{
         margin-top: 1.4rem;
         padding-left: 0rem;
-    }
-
-    @keyframes showMenu{
-        to{
-            left: 0;
-        }
     }
 
     aside .logo{
